--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,24 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+@keyframes appear {
+  from {
+    opacity: 0;
+    /* scale: 0.8; */
+  } to {
+    opacity: 1;
+    /* scale: 1; */
+  }
+}
+
+.appear-animetion {
+  animation: appear 1s linear
+}
+
+
+
+
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
