Update animate all page Fixed mobil

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,6 +58,18 @@ body {
 }
 
 
+@keyframes moveLeft {
+  from {
+    right: -20vw;
+  } to {
+    /* right: 16px; */
+  }
+}
+
+.move-left-animation {
+  animation: moveLeft 1s linear
+}
+
 
 
 
