--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,7 +42,8 @@ html, body {
   padding: 0;
   margin: 0;
 
-  touch-action: pan-x, pan-y;
+  touch-action: pan-x pan-y;
+  overflow: hidden;
 }
 
 
